<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >
    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_password_layout"
        >
    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="@dimen/_30sdp"
        android:textColor="@color/black0"
        android:fontFamily="@font/articulatcf_demi_normal"
        android:layout_marginTop="@dimen/_25sdp"
    android:layout_gravity="center"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_email_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:textColorHint="@color/colorPrimary"

        app:endIconMode="clear_text"
        app:counterEnabled="false"
        app:helperTextTextColor="@android:color/holo_red_light"
        android:hint="이메일"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterMaxLength="20"
            android:textSize="@dimen/_18sdp"
            android:inputType="text"

            android:textStyle="bold"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:textColorHint="@color/colorPrimary"

        app:endIconMode="clear_text"
        app:counterEnabled="false"
        app:counterMaxLength="20"
        app:helperTextTextColor="@android:color/holo_red_light"
        android:hint="비밀번호"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterMaxLength="20"
            android:textSize="@dimen/_18sdp"
            android:inputType="text"

            android:textStyle="bold"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"

            />

    </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:orientation="horizontal"
            >
            <CheckBox
                android:layout_width="@dimen/_25ssp"
                android:layout_height="@dimen/_30sdp"/>

            <TextView
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="아이디 저장"
                android:textSize="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_gravity="center"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:fontFamily="@font/articulatcf_demi_normal"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <CheckBox
                android:layout_width="@dimen/_25ssp"
                android:layout_height="@dimen/_30sdp"/>

            <TextView
                android:id="@+id/checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="자동 로그인"
                android:textSize="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_gravity="center"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:fontFamily="@font/articulatcf_demi_normal"
                />

        </LinearLayout>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            app:cardCornerRadius="@dimen/_5ssp"
            app:cardElevation="@dimen/_5ssp"
            app:cardMaxElevation="@dimen/_8sdp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:strokeWidth="@dimen/_1sdp"
            app:strokeColor="@color/gray_light"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_remember"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/log_in_"
                android:fontFamily="@font/articulatcf_demi_normal"
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:textSize="@dimen/_21sdp"
                android:textStyle="bold"
                android:paddingStart="@dimen/_10ssp"
                android:drawablePadding="@dimen/_18sdp"
                android:padding="@dimen/_8sdp"

                />

        </com.google.android.material.card.MaterialCardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >


            <TextView
                android:id="@+id/text1"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="아이디  |  비밀번호 찾기"
                android:textSize="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_gravity="center"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:fontFamily="@font/articulatcf_demi_normal"
                />

            <TextView
                android:id="@+id/text2"
                android:layout_marginEnd="@dimen/_22ssp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="회원가입"
                android:textSize="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_gravity="end"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:fontFamily="@font/articulatcf_demi_normal"
                />

        </LinearLayout>

    </LinearLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/_5sdp"
    android:scrollbarAlwaysDrawVerticalTrack="true"

    app:layout_constraintTop_toBottomOf="@+id/layout_login"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >



        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_kokaoTalk"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            app:cardCornerRadius="@dimen/_5ssp"
            app:cardElevation="@dimen/_5ssp"
            app:cardMaxElevation="@dimen/_8sdp"
            app:strokeWidth="@dimen/_1sdp"
            app:strokeColor="@color/gray_light"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"


            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >
                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/kakaotalk"

                    android:layout_gravity="center"

                    />
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black2"
                    android:text="Kakao Talk 로그인"
                    android:fontFamily="@font/articulatcf_demi_normal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginEnd="@dimen/_10sdp"

                    android:textSize="@dimen/_15sdp"


                    android:padding="@dimen/_8sdp"

                    />
            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_facebook"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            app:cardCornerRadius="@dimen/_5ssp"
            app:cardElevation="@dimen/_5ssp"
            app:cardMaxElevation="@dimen/_8sdp"
            app:strokeWidth="@dimen/_1sdp"
            app:strokeColor="@color/gray_light"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"


            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >
                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/face"

                    android:layout_gravity="center"

                    />
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black2"
                    android:text="@string/facebook_login"
                    android:fontFamily="@font/articulatcf_demi_normal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textSize="@dimen/_15sdp"


                    android:padding="@dimen/_8sdp"

                    />
            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_google"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            app:cardCornerRadius="@dimen/_5ssp"
            app:cardElevation="@dimen/_5ssp"
            app:cardMaxElevation="@dimen/_8sdp"
            app:strokeWidth="@dimen/_1sdp"
            app:strokeColor="@color/gray_light"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"


            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >
                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/google_logo"

                    android:layout_gravity="center"

                    />
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black2"
                    android:text="@string/google_login"
                    android:fontFamily="@font/articulatcf_demi_normal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textSize="@dimen/_15sdp"


                    android:padding="@dimen/_8sdp"

                    />
            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_naver"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            app:cardCornerRadius="@dimen/_5ssp"
            app:cardElevation="@dimen/_5ssp"
            app:cardMaxElevation="@dimen/_8sdp"
            app:strokeWidth="@dimen/_1sdp"
            app:strokeColor="@color/gray_light"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"


            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >
                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/n"

                    android:layout_gravity="center"

                    />
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black2"
                    android:text="@string/naver_login"
                    android:fontFamily="@font/articulatcf_demi_normal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textSize="@dimen/_15sdp"


                    android:padding="@dimen/_8sdp"

                    />
            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_apple"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            app:cardCornerRadius="@dimen/_5ssp"
            app:cardElevation="@dimen/_5ssp"
            app:cardMaxElevation="@dimen/_8sdp"
            app:strokeWidth="@dimen/_1sdp"
            app:strokeColor="@color/gray_light"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"


            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >
                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/apple_logo"

                    android:layout_gravity="center"

                    />
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black2"
                    android:text="@string/apple_login"
                    android:fontFamily="@font/articulatcf_demi_normal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textSize="@dimen/_15sdp"


                    android:padding="@dimen/_8sdp"

                    />
            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>



    </LinearLayout>

</ScrollView>







</LinearLayout>